xidlc/tests/invalid/http_security_duplicate_basic.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidDuplicateSecurityService {
    @http_basic
    @http_basic
    @get(path = "/reports")
    string list_reports();
};
